--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -2,6 +2,17 @@
 <link rel="stylesheet" href="{% static 'polls/detail.css' %}">
 
 <body>
-<a>{{ question.question_text}} {{question.pub_date }}</a>
-<a href="/polls/{{ question.id }}/vote" class="secundar">vote here</a>
+
+<h1>{{ question.question_text}} {{question.pub_date }}</h1>
+{% if error_message %}<p><strong>{{ error_message }}</p></strong>{%endif%}
+
+<form action="{% url 'polls:vote' question.id %}" method="post">
+{% csrf_token %}
+{% for choice in question.choice_set.all %}
+    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+{% endfor %}
+<input type="submit" value="Vote">
+</form>
+
 </body>
