--- a/polls/static/polls/detail.css
+++ b/polls/static/polls/detail.css
@@ -1,9 +1,9 @@
 body{
-    background-color: blue;
+    background-color: crimson;
 }
 a{
-    color:red;
+    color:white;
 }
 .secundar{
-    color:yellow;
+    color:orange;
 }
