--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,3 +1,9 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'polls/detail.css' %}">
+<h2>Polls app. Here are the avalaible questions</h2>
+
+
+
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
@@ -7,3 +13,5 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+
+<a href="{% url 'polls:polls-form' %}">Manage polls</a>
