--- a/polls/static/polls/detail.css
+++ b/polls/static/polls/detail.css
@@ -1,5 +1,8 @@
+@font-face {font-family: "JosefinSans-Italic-VariableFont_wght";src: url("JosefinSans-Italic-VariableFont_wght.ttf");}
+
 body{
     background-color: crimson;
+    font-family:JosefinSans-Italic-VariableFont_wgh;
 }
 a{
     color:white;
